# connect-four

./: README.md  justfile  pyproject.toml  requirements.txt
.github/workflows/: python-test.yml  ruff.yml
certs/: fullchain.pem  privkey.pem
src/: client.py  client_test.py  client_text.py  client_tui.py  server.py
src/lib/: connect_four.py  data.py  packets.py
src/tests/: test_connect_four.py
