[project]
name = "connect-four"
version = "0.1.0"
description = "The game of Connect Four implemented as a TUI using Python and `sockets` for networking."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioconsole>=0.8.1",
    "loguru>=0.7.2",
    "mypy>=1.11.2",
    "numpy>=2.1.1",
    "numpydantic>=1.6.4",
    "pydantic>=2.9.2",
    "pytest>=8.3.3",
    "rich>=13.8.1",
    "ruff>=0.6.5",
    "textual-dev>=1.6.1",
    "textual>=0.79.1",
]

[tool.ruff]
line-length = 128
indent-width = 4
